Fix horizontal scroll

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -4,6 +4,7 @@
 #home {
   background: $black;
   color: $white;
+  overflow: hidden;
 
   button {
     padding-left: 5rem;
